// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactTestUtils Simulate should have locally attached media events 1`] = `
Array [
  "abort",
  "animationEnd",
  "animationIteration",
  "animationStart",
  "auxClick",
  "beforeInput",
  "blur",
  "canPlay",
  "canPlayThrough",
  "cancel",
  "change",
  "click",
  "close",
  "compositionEnd",
  "compositionStart",
  "compositionUpdate",
  "contextMenu",
  "copy",
  "cut",
  "doubleClick",
  "drag",
  "dragEnd",
  "dragEnter",
  "dragExit",
  "dragLeave",
  "dragOver",
  "dragStart",
  "drop",
  "durationChange",
  "emptied",
  "encrypted",
  "ended",
  "error",
  "focus",
  "gotPointerCapture",
  "input",
  "invalid",
  "keyDown",
  "keyPress",
  "keyUp",
  "load",
  "loadStart",
  "loadedData",
  "loadedMetadata",
  "lostPointerCapture",
  "mouseDown",
  "mouseEnter",
  "mouseLeave",
  "mouseMove",
  "mouseOut",
  "mouseOver",
  "mouseUp",
  "paste",
  "pause",
  "play",
  "playing",
  "pointerCancel",
  "pointerDown",
  "pointerEnter",
  "pointerLeave",
  "pointerMove",
  "pointerOut",
  "pointerOver",
  "pointerUp",
  "progress",
  "rateChange",
  "reset",
  "scroll",
  "seeked",
  "seeking",
  "select",
  "stalled",
  "submit",
  "suspend",
  "timeUpdate",
  "toggle",
  "touchCancel",
  "touchEnd",
  "touchMove",
  "touchStart",
  "transitionEnd",
  "volumeChange",
  "waiting",
  "wheel",
]
`;

exports[`ReactTestUtils SimulateNative should have locally attached media events 1`] = `
Array [
  "abort",
  "animationEnd",
  "animationIteration",
  "animationStart",
  "blur",
  "canPlay",
  "canPlayThrough",
  "cancel",
  "change",
  "click",
  "close",
  "compositionEnd",
  "compositionStart",
  "compositionUpdate",
  "contextMenu",
  "copy",
  "cut",
  "doubleClick",
  "drag",
  "dragEnd",
  "dragEnter",
  "dragExit",
  "dragLeave",
  "dragOver",
  "dragStart",
  "drop",
  "durationChange",
  "emptied",
  "encrypted",
  "ended",
  "error",
  "focus",
  "input",
  "keyDown",
  "keyPress",
  "keyUp",
  "load",
  "loadStart",
  "loadedData",
  "loadedMetadata",
  "mouseDown",
  "mouseMove",
  "mouseOut",
  "mouseOver",
  "mouseUp",
  "paste",
  "pause",
  "play",
  "playing",
  "progress",
  "rateChange",
  "scroll",
  "seeked",
  "seeking",
  "selectionChange",
  "stalled",
  "suspend",
  "textInput",
  "timeUpdate",
  "toggle",
  "touchCancel",
  "touchEnd",
  "touchMove",
  "touchStart",
  "transitionEnd",
  "volumeChange",
  "waiting",
  "wheel",
]
`;
